fix: Center align text on welcome card

--- a/app/styles/components/welcome-card.less
+++ b/app/styles/components/welcome-card.less
@@ -2,6 +2,7 @@
     margin: 0 auto;
     max-width: 480px;
     width: 100%;
+    text-align: center;
 }
 
 .welcome-card-container {
